fixes sidebar on mobile

--- a/styles/components/ui/_layout.scss
+++ b/styles/components/ui/_layout.scss
@@ -28,6 +28,10 @@
 
       padding-bottom: $space-lg;
     }
+
+    .page__content.noscroll {
+      overflow: hidden;
+    }
   }
 }
 
