--- a/styles/components/ui/_sidebar.scss
+++ b/styles/components/ui/_sidebar.scss
@@ -120,7 +120,7 @@ $sidebar-width: 22rem;
   .close-icon {
     display: none;
     z-index: 1;
-    // background: white;
+    background: white;
 
     &__inner {
       padding: $space-md;
